...
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="download" translatesAutoresizingMaskIntoConstraints="NO" id="iAH-NV-Zqz">
                                                <rect key="frame" x="3" y="3" width="314" height="125"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="125" id="V4e-a3-5nU"/>
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8uR-tD-sbG">
                                                <rect key="frame" x="3" y="146" width="314" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="uUQ-yB-8zO"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nJS-oD-b0T" userLabel="Please enter last name">
                                                <rect key="frame" x="3" y="181" width="314" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="4H4-Yo-dB9"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter StudentID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vKK-6S-dNB">
                                                <rect key="frame" x="3" y="216" width="314" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="zsT-mN-HYo"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter email id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fv6-ds-Gom">
                                                <rect key="frame" x="3" y="251" width="314" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="1Gf-45-sxj"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                                <color key="backgroundColor" red="0.33333333329999998" green="0.90196078430000004" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="O90-C0-pdv"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                                <color key="tintColor" red="0.17254901959999999" green="0.2274509804" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <state key="normal" title="Save"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="5"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="onSaveNewStudentClick:" destination="u6A-nr-OdY" eventType="touchUpInside" id="lx2-wl-mRO"/>
                                                </connections>
                                            </button>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter Phone number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kys-eK-Q3v">
                                                <rect key="frame" x="3" y="286" width="314" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="WLq-8U-rLD"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
...
