<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fs6-C7-wJQ">
    <device id="retina4_0" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Home View Controller-->
        <scene sceneID="JFk-VP-fKt">
            <objects>
                <tabBarController id="fs6-C7-wJQ" customClass="HomeViewController" customModule="myclass" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBar key="tabBar" clipsSubviews="YES" clearsContextBeforeDrawing="NO" alpha="0.94999999999999996" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e7H-P1-ULF">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" red="0.085363395512104034" green="0.66207867860794067" blue="0.74980062246322632" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBar>
                    <connections>
                        <segue destination="Y6g-YC-zpg" kind="relationship" relationship="viewControllers" id="K7x-MU-7K2"/>
                        <segue destination="Tfx-4N-b9U" kind="relationship" relationship="viewControllers" id="24j-yh-z4T"/>
                        <segue destination="OMP-23-eA7" kind="relationship" relationship="viewControllers" id="4io-uG-NOR"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="LyO-et-iRi" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1524" y="21"/>
        </scene>
        <!--Attendance-->
        <scene sceneID="Sia-6a-keV">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Y6g-YC-zpg" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Attendance" image="attendanceIcon" id="FTi-FX-6CN"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gLi-9i-JW6" customClass="Attendance">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.79215686269999996" green="0.82745098039999998" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="UT3-dp-7HE" kind="relationship" relationship="rootViewController" id="AYJ-00-7YK"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="riU-Uv-lDe" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-519" y="-838"/>
        </scene>
        <!--Assessment-->
        <scene sceneID="A0B-FR-u3W">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Tfx-4N-b9U" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Assessment" image="marksIcons" id="eyS-fa-UJ1"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tTh-Pf-MkU">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.79215686269999996" green="0.82745098039999998" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="N4K-9G-Qcf" kind="relationship" relationship="rootViewController" id="DES-Wc-7Ke"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="8Vg-ET-qek" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-519" y="4"/>
        </scene>
        <!--Attendance-->
        <scene sceneID="jhB-QY-Edh">
            <objects>
                <viewControllerPlaceholder storyboardName="Attendance" id="UT3-dp-7HE" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="9bj-co-S38"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="OSz-bc-4qt" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="358" y="-729"/>
        </scene>
        <!--Assessments-->
        <scene sceneID="G7E-Eo-GGQ">
            <objects>
                <viewControllerPlaceholder storyboardName="Assessments" id="N4K-9G-Qcf" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="oQV-28-owx"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yZd-Mg-bPd" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="479" y="-147"/>
        </scene>
        <!--Export-->
        <scene sceneID="drW-PH-0Zj">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OMP-23-eA7" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Export" image="exportIcon" id="280-Tm-uGm"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bmn-VS-MWu">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.79215686269999996" green="0.82745098039999998" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="by5-gV-9Ox" kind="relationship" relationship="rootViewController" id="Kcu-pd-XDG"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="oWw-ZX-yvS" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-519" y="815"/>
        </scene>
        <!--Export-->
        <scene sceneID="uoj-gt-BCX">
            <objects>
                <viewControllerPlaceholder storyboardName="Export" id="by5-gV-9Ox" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="BIn-0J-pAs"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BfI-gQ-PYh" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="468" y="742"/>
        </scene>
    </scenes>
    <resources>
        <image name="attendanceIcon" width="29" height="29"/>
        <image name="exportIcon" width="29" height="29"/>
        <image name="marksIcons" width="29" height="29"/>
    </resources>
</document>
